# p2c

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cc
cmake/: gtest.cmake
include/: internal.h
include/IR/: Binop.h  Builder.h  ColTypes.h  Concepts.h  Defs.h  Expression.h  Hash.h  Pipeline.h  Scope.h  SymbolManager.h  Tuple.h  Types.h  Unop.h
include/internal/: Compiler.h  File.h  QueryScheduler.h  Tpch.h  basetypes.h  tpch.h
include/operators/: Aggregation.h  Driver.h  InnerJoin.h  Iu.h  Map.h  Operations.h  Operator.h  OperatorContext.h  Scan.h  Selection.h  Sort.h
include/runtime/: Hashtables.h  Hyperloglog.h  Murmur.h  Runtime.h  Test.h  ThreadLocal.h  ThreadLocalContext.h  Tuplebuffer.h  TypeInfo.h  hyperloglog.h  tuplebuffer.h
lib/: CMakeLists.txt  Driver.cc  IU.cc
lib/IR/: BinOp.cc  Builder.cc  CMakeLists.txt  ColTypes.cc  Pipeline.cc  Tuple.cc  Types.cc  UnOp.cc
lib/runtime/: CMakeLists.txt  Hashtable.cc  Runtime.cc  Test.cc  Tuplebuffer.cc
unittests/: CMakeLists.txt  hll_test.cc  load_test.cc  materialization_test.cc  sort_test.cc  sv_test.cc  threadlocal_test.cc  tpch_test.cc
